exp1/k8s/svc1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-svc1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-svc1
  template:
    metadata:
      labels:
        app: nginx-svc1
    spec:
      containers:
        - name: nginx
          image: ghcr.io/ericmelz/ghcr_test/svc1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc1
spec:
  selector:
    app: nginx-svc1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
