exp1/k8s/svc3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc3
  template:
    metadata:
      labels:
        app: svc3
    spec:
      containers:
        - name: nginx
          image: ghcr.io/ericmelz/ghcr_test/svc3:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc3
spec:
  selector:
    app: svc3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
